finally fixed contrast issue
just had to make the footer black

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 header, main, footer {
   font-family:  Helvetica, Arial, sans-serif;
-  font-size: 14pt;
+  font-size: 12pt;
 }
 header {
   background-color: black;
@@ -29,8 +29,8 @@ h3 {
 }
 img { /* position and scale fix for photo */
   margin: auto;
-  width: 450px;
-  height:450px;
+  width: 300px;
+  height: 300px;
   transform: scaleX(1.35)
 }
 main article div { /* structures the containers of main page content */
@@ -43,7 +43,7 @@ main {
   padding: 50px 0px;
   background-color: white;
   line-height: 1.8; /* for better readability */
-  font-weight: bold;
+  /*font-weight: bold;*/
 }
 .centered-text, h3 {
   text-align: center;
@@ -51,7 +51,7 @@ main {
 footer {
   text-align: center;
   color: white;
-  background-color: grey;
+  background-color: black;
   padding: 20px;
 }
 hr {
@@ -65,7 +65,7 @@ ol {
 }
 
 nav a:link    { color: white           }
-a:visited     { color: orangered          }
-a:hover       { color: blue  }
+a:visited     { color: orangered       }
+a:hover       { color: blue            }
 a:active      { color: cyan            }
 main a:link   { color: black           }
